Added curriculum vitae

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@ interests lie in <em>computer science education</em>, <em>digital libraries</em>
 Before joining UNZA, I was a <a href="http://people.cs.uct.ac.za/~lphiri">Ph.D student</a> (<em><strong>thesis under examination</strong></em>) at the <a href="http://www.uct.ac.za">University of Cape Town</a> (UCT). <br />
 Prior to that, I was an M.Sc. student at UCT. <br /> 
 Formerly, I worked with Telco ETL processing nodes at <a href="http://www.africa.airtel.com/zambia">Airtel</a>. <br />
-Earlier, I studied Software Engineering at UNZA.
+Earlier, I studied Software Engineering at UNZA. <strong><em><a href="docs-lighton_phiri-curriculum_vitae.pdf">(more...)</a></em></strong>
+<br />
 
 <hr>
 
